[CLASHCODE-98] fixed OR logic query to AND logic