@@ -143,7 +143,7 @@ class ProblemServiceTest {
         List<Problem> problems = List.of(problem);
         Page<Problem> page = new PageImpl<>(problems, PageRequest.of(0, 10), problems.size());
 
-        when(problemRepository.findByTagsAndRate(anyList(), anyInt(), any(PageRequest.class))).thenReturn(page);
+        when(problemRepository.findByTagsAndRate(anyList(), anyLong(), anyInt(), any(PageRequest.class))).thenReturn(page);
 
         ProblemListDto dto = new ProblemListDto();
         dto.setId(1L);
@@ -154,82 +154,70 @@ class ProblemServiceTest {
         );
 
         assertEquals(1, result.getContent().size());
-        assertEquals(1L, result.getContent().getFirst().getId());
+        assertEquals(1L, result.getContent().get(0).getId());
 
         verify(problemRepository, times(1))
-                .findByTagsAndRate(anyList(), anyInt(), any(PageRequest.class));
+                .findByTagsAndRate(anyList(), eq(2L), eq(200), any(PageRequest.class));
         verify(problemMapper, times(1)).toListDto(problem);
     }
 
     @Test
     void testGetFilteredProblems_EmptyTags() {
-        // Given: empty tags list with a rate value
         Problem problem = new Problem();
         problem.setId(2L);
 
         Page<Problem> page = new PageImpl<>(List.of(problem));
-
-        // When tags are empty, they become null, so with rate provided, findByRate is called
         when(problemRepository.findByRate(200, PageRequest.of(0, 10))).thenReturn(page);
 
         ProblemListDto dto = new ProblemListDto();
         dto.setId(2L);
         when(problemMapper.toListDto(problem)).thenReturn(dto);
 
-        // When: Pass empty list for tags → should be treated as null and call findByRate
         Page<ProblemListDto> result = problemService.getFilteredProblems(Collections.emptyList(), 200, 0, 10);
 
-        // Then
         assertEquals(1, result.getContent().size());
         assertEquals(2L, result.getContent().getFirst().getId());
 
         verify(problemRepository).findByRate(200, PageRequest.of(0, 10));
-        verify(problemRepository, never()).findByTagsAndRate(any(), any(), any());
+        verify(problemRepository, never()).findByTagsAndRate(anyList(), anyLong(), anyInt(), any());
     }
 
     @Test
     void testGetFilteredProblems_OnlyTags() {
-        // Given: tags without rate
         Problem problem = new Problem();
         problem.setId(3L);
 
         Page<Problem> page = new PageImpl<>(List.of(problem));
         List<ProblemTags> tags = List.of(ProblemTags.MATH);
 
-        when(problemRepository.findByTags(tags, PageRequest.of(0, 10))).thenReturn(page);
+        when(problemRepository.findByTags(tags, 1L, PageRequest.of(0, 10))).thenReturn(page);
 
         ProblemListDto dto = new ProblemListDto();
         dto.setId(3L);
         when(problemMapper.toListDto(problem)).thenReturn(dto);
 
-        // When: Pass only tags, no rate
         Page<ProblemListDto> result = problemService.getFilteredProblems(tags, null, 0, 10);
 
-        // Then
         assertEquals(1, result.getContent().size());
         assertEquals(3L, result.getContent().getFirst().getId());
 
-        verify(problemRepository).findByTags(tags, PageRequest.of(0, 10));
+        verify(problemRepository).findByTags(tags, 1L, PageRequest.of(0, 10));
     }
 
     @Test
     void testGetFilteredProblems_OnlyRate() {
-        // Given: rate without tags
         Problem problem = new Problem();
         problem.setId(4L);
 
         Page<Problem> page = new PageImpl<>(List.of(problem));
-
         when(problemRepository.findByRate(300, PageRequest.of(0, 10))).thenReturn(page);
 
         ProblemListDto dto = new ProblemListDto();
         dto.setId(4L);
         when(problemMapper.toListDto(problem)).thenReturn(dto);
 
-        // When: Pass only rate, no tags
         Page<ProblemListDto> result = problemService.getFilteredProblems(null, 300, 0, 10);
 
-        // Then
         assertEquals(1, result.getContent().size());
         assertEquals(4L, result.getContent().getFirst().getId());
 
@@ -238,27 +226,24 @@ class ProblemServiceTest {
 
     @Test
     void testGetFilteredProblems_NoFilters() {
-        // Given: no tags and no rate
         Problem problem = new Problem();
         problem.setId(5L);
 
         Page<Problem> page = new PageImpl<>(List.of(problem));
-
         when(problemRepository.findAll(PageRequest.of(0, 10))).thenReturn(page);
 
         ProblemListDto dto = new ProblemListDto();
         dto.setId(5L);
         when(problemMapper.toListDto(problem)).thenReturn(dto);
 
-        // When: Pass null for both tags and rate
         Page<ProblemListDto> result = problemService.getFilteredProblems(null, null, 0, 10);
 
-        // Then
         assertEquals(1, result.getContent().size());
         assertEquals(5L, result.getContent().getFirst().getId());
 
         verify(problemRepository).findAll(PageRequest.of(0, 10));
     }
+
 
 
 }
